add get articles handler
