# internal/controller/handler.go
@@ -1,8 +1,14 @@
 package controller
 
-import "github.com/gin-gonic/gin"
+import (
+	"database/sql"
 
-type EndpointHandler struct{}
+	"github.com/gin-gonic/gin"
+)
+
+type EndpointHandler struct {
+	db *sql.DB
+}
 
 func (s *EndpointHandler) Login(c *gin.Context) {
 }
@@ -23,7 +29,47 @@ func (s *EndpointHandler) GetMe(c *gin.Context) {
 }
 
 func (s *EndpointHandler) GetArticles(c *gin.Context) {
+	db := s.db
+	rows, err := db.Query("SELECT id, title, discription, image, categories.name AS category FROM articles INNER JOIN categories ON articles.category_id = categories.id")
+	if err != nil {
+		c.JSON(500, gin.H{"error": err.Error()})
+		return
+	}
+	defer rows.Close()
+
+	var articles []GetArticleResponse
+
+	for rows.Next() {
+		var article GetArticleResponse
+		err := rows.Scan(&article.Id, &article.Title, &article.Description, &article.Image, &article.Category)
+		if err != nil {
+			c.JSON(500, gin.H{"error": err.Error()})
+			return
+		}
+		articles = append(articles, article)
+	}
+
+	c.JSON(200, articles)
 }
 
 func (s *EndpointHandler) GetArticle(c *gin.Context, articleId ArticleId) {
+	db := s.db
+	rows, err := db.Query("SELECT id, title, discription, image, categories.name AS category FROM articles INNER JOIN categories ON articles.category_id = categories.id WHERE articles.id = $1", articleId)
+	if err != nil {
+		c.JSON(500, gin.H{"error": err.Error()})
+		return
+	}
+	defer rows.Close()
+
+	var article GetArticleResponse
+
+	if rows.Next() {
+		err := rows.Scan(&article.Id, &article.Title, &article.Description, &article.Image, &article.Category)
+		if err != nil {
+			c.JSON(500, gin.H{"error": err.Error()})
+			return
+		}
+	}
+
+	c.JSON(200, article)
 }
